--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -3,19 +3,30 @@
     package="com.ferdyhaspin.myfirstunittesting">
 
     <application
-        android:allowBackup="true"
         android:icon="@mipmap/ic_launcher"
         android:label="@string/app_name"
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-        <activity android:name=".MainActivity">
+        <activity android:name=".broadcastreceiver.BroadcastActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
+
+        <activity android:name=".service.ServiceActivity" />
+
+        <activity android:name=".testing.MainActivity" />
+
+        <service
+            android:name=".service.BoundServices"
+            android:enabled="true"
+            android:exported="true"
+            android:permission="@null" />
+
+
     </application>
 
 </manifest>
