add alarm manager

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -2,19 +2,51 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="com.ferdyhaspin.myfirstunittesting">
 
+    <uses-permission android:name="android.permission.WAKE_LOCK" />
+    <uses-permission android:name="android.permission.VIBRATE" />
+    <uses-permission android:name="android.permission.RECEIVE_SMS" />
+    <uses-permission android:name="android.permission.READ_SMS" />
+
     <application
         android:icon="@mipmap/ic_launcher"
         android:label="@string/app_name"
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-        <activity android:name=".broadcastreceiver.BroadcastActivity">
+
+        <receiver
+            android:name=".alarmmanager.AlarmReceiver"
+            android:enabled="true"
+            android:exported="true"
+            android:permission="android.permission.WAKE_LOCK" />
+
+        <activity android:name=".alarmmanager.AlarmActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
+
+        <service
+            android:name=".broadcastreceiver.DownloadService"
+            android:exported="false" />
+
+        <receiver
+            android:name=".broadcastreceiver.SmsReceiver"
+            android:enabled="true"
+            android:exported="true"
+            android:permission="android.permission.BROADCAST_SMS">
+            <intent-filter>
+                <action android:name="android.provider.Telephony.SMS_RECEIVED" />
+            </intent-filter>
+        </receiver>
+
+        <activity
+            android:name=".broadcastreceiver.SmsReceiverActivity"
+            android:theme="@style/SmsReceiverTheme" />
+
+        <activity android:name=".broadcastreceiver.BroadcastActivity" />
 
         <activity android:name=".service.ServiceActivity" />
 
@@ -25,8 +57,6 @@
             android:enabled="true"
             android:exported="true"
             android:permission="@null" />
-
-
     </application>
 
 </manifest>
